# 1.12.00 (52635) Jun 4, 2011
6/4/11 > added new translation credits features
# 1.11.01 (52609) Jun 2, 2011
Use an ApparatusPanel3 to fix scaling problems on low resolution screens, see #2860
# 1.11.00 (48298) Jan 27, 2011
> localization fixes
1/27/11 #2710, i18n of "# of levels"
# 1.10.01 (48177) Jan 23, 2011
1/13/11 #2645, make strings translatable in Legend panel
# 1.10.00 (37987) Jan 9, 2010
1/9/10 public version for milestone "full redeploy, 2010 Q1"
# 1.09.01 (37344) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 1.09.00 (30589) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30588
# 1.08.02 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.08.01 (28784) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
1-9-2009: #1082, delete SimString from discharge-lamps
10-13-2008: fix all string files to use discharge-lamps.name and discharge-lamps.description
10-13-2008: replace ImageLoader with PhetResources
10-13-2008: switch to PhetApplication constructor that takes a PhetApplicationConfig
10-9-2008: convert to use PhetApplicationConfig.launchSim
10-9-2008: create change log file