@@ -1,7 +1,7 @@
 #discharge-lamps-strings_it.properties created Tue Jun 19 09:00:20 CEST 2012 using: discharge-lamps 1.12.00 (52635), translation-utility 2.13.00 (59150) dic 8, 2011
 #Tue Jun 19 09:00:20 CEST 2012
 spectrometer.start=Inizia
-Misc.groundState=Stato fondamentale
+Misc.groundState=Stato<br>fondamentale
 spectrometer.stop=Ferma
 simulation.speed=Velocit\u00E0 di simulazione
 Misc.ActualPixBtn.label=<html><center>Vedi foto della<br> Lampada a Scarica utilizzata</center></html>
