@@ -1,3 +1,4 @@
+> Converted "ground state" label to be html to support multi-line
 # 1.12.00 (52635) Jun 4, 2011
 6/4/11 > added new translation credits features
 # 1.11.01 (52609) Jun 2, 2011
